Kubernetes/ingress/headless.yml
apiVersion: v1
kind: Service
metadata:
  name: x3m55-headless
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: prod
