Kubernetes/ingress/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: x3m55-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30123
  selector:
    app: prod
