Kubernetes/ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
#  annotations:
#   service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: external-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: prod
