Kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: x3m552
spec:
  rules:
  - host: x3m55.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: x3m55-nodeport
          servicePort: 80
      - path: "/web1"
        backend:
          serviceName: x3m55-nodeport
          servicePort: 80    
          
          
          
  - host: x3m55.example2.com
    http:
      paths:
      - path: /
        backend:
          serviceName: x3m55-nodeport
          servicePort: 80
